--- a/www/html/finder.html
+++ b/www/html/finder.html
@@ -7,27 +7,24 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
-    <link rel="stylesheet" type="text/css" href="../css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-    <title>Página Inicial</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <title>Log-In</title>
 </head>
 
 <body>
     <div class="content">
-        <br><br><br>
-        <center>
-            <h1>olá</h1>
-        </center>
+        oi
+
     </div>
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-
     <script type="text/javascript" src="../cordova.js"></script>
     <script type="text/javascript" src="../js/materialize.min.js"></script>
-    <!-- <script type="module" src="../js/home.js"></script> -->
-
-
+    <script type="module" src="../js/finder.js"></script>
 </body>
 
 </html>
