--- a/www/html/finder.html
+++ b/www/html/finder.html
@@ -3,23 +3,33 @@
 
 <head>
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport"
-        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet" />
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/finder.css" />
     <title>Log-In</title>
 </head>
 
 <body>
     <div class="content">
-        oi
-
+        
+        <div id="range">25</div>
+        <div id="sliderDiv">
+            <form action="#">
+                <p class="range-field ">
+                    <input type="range" id="slider" min="5" max="100" step="1" />
+                    <button id="submit" class="btn waves-effect waves-light btn-blue black-text"
+                                    type="submit" name="action">Enviar</button>
+                </p>
+            </form>
+        </div>
     </div>
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../cordova.js"></script>
@@ -28,3 +38,5 @@
 </body>
 
 </html>
+
+
