making near player page

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -8,8 +8,8 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="../css/index.css">
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
     <link rel="stylesheet" type="text/css" href="../css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/home.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <title>Página Inicial</title>
@@ -58,14 +58,13 @@
             </div>
 
             <div class="row">
-                <a href="finder.html" class="btn-flat black-text"
-                    style="background-color: white; border: 1px solid black; border-radius: 10px">
+                <!-- <a href="finder.html" class="btn-flat black-text whitebg"> -->
+                <a class="btn-flat black-text whitebg" id="btn-finder">
                     Buscar Jogadores
                 </a>
             </div>
             <div class="row">
-                <a href="messages.html" class="btn-flat black-text"
-                    style="background-color: white; border: 1px solid black; border-radius: 10px">
+                <a href="messages.html" class="btn-flat black-text whitebg">
                     Mensagens
                 </a>
             </div>
