--- a/www/html/finder.html
+++ b/www/html/finder.html
@@ -19,16 +19,52 @@
 
 <body>
     <div class="content">
-        
-        <div id="range">25</div>
-        <div id="sliderDiv">
-            <form action="#">
-                <p class="range-field ">
-                    <input type="range" id="slider" min="5" max="100" step="1" />
-                    <button id="submit" class="btn waves-effect waves-light btn-blue black-text"
-                                    type="submit" name="action">Enviar</button>
-                </p>
-            </form>
+        <div class="container">
+            <!-- <div class="row">
+                <div class="col s1">1</div>
+                <div class="col s1">2</div>
+                <div class="col s1">3</div>
+                <div class="col s1">4</div>
+                <div class="col s1">5</div>
+                <div class="col s1">6</div>
+                <div class="col s1">7</div>
+                <div class="col s1">8</div>
+                <div class="col s1">9</div>
+                <div class="col s1">10</div>
+                <div class="col s1">11</div>
+                <div class="col s1">12</div>
+            </div> -->
+
+            <div class="row">
+                <div class="col s8 offset-s2 " id="img">
+                    <img class="circle responsive-img center-align" src="../img/gohan.jpeg" id="photo" />
+                </div>
+
+                <div class="col s10 offset-s1 center-align" id="icons">
+                    <div class="col s6 btn-act">
+                            <i class="medium material-icons ">clear</i>
+                    </div>
+                    <div class="col s6 btn-act">                        
+                            <i class="medium material-icons ">gamepad</i>
+                    </div>
+                </div>
+                <div class="col s10 offset-s1 center-align" id="details">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut ex iaculis,
+                    cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc imperdiet sed nisl
+                    nec commodo. Integer eu erat quam. Pellentesque mattis lectus vitae turpis varius facilisis. Sed ut
+                    faucibus erat. Etiam et nisl et odio facilisis tristique quis quis dolor. Aenean venenatis, ipsum at
+                    viverra venenatis, justo ex cursus magna, et suscipit nunc nisi at mi. Phasellus dictum lectus nec
+                    augue commodo, ac pellentesque ligula tristique. Suspendisse non vulputate magna. Proin ac sem
+                    rutrum, congue felis non, faucibus purus. Donec in mattis erat, in sodales.
+                </div>
+                <!-- <div class="col s10 offset-s1 center-align" id="details">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut ex iaculis,
+                    cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc imperdiet sed nisl
+                    nec commodo. Integer eu erat quam. Pellentesque mattis lectus vitae turpis varius facilisis. Sed ut
+                    faucibus erat. Etiam et nisl et odio facilisis tristique quis quis dolor.
+                </div> -->
+
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
@@ -38,5 +74,3 @@
 </body>
 
 </html>
-
-
