--- a/www/html/finder.html
+++ b/www/html/finder.html
@@ -20,35 +20,69 @@
 <body>
     <div class="content">
         <div class="container">
-            <!-- <div class="row">
-                <div class="col s1">1</div>
-                <div class="col s1">2</div>
-                <div class="col s1">3</div>
-                <div class="col s1">4</div>
-                <div class="col s1">5</div>
-                <div class="col s1">6</div>
-                <div class="col s1">7</div>
-                <div class="col s1">8</div>
-                <div class="col s1">9</div>
-                <div class="col s1">10</div>
-                <div class="col s1">11</div>
-                <div class="col s1">12</div>
-            </div> -->
-
             <div class="row">
-                <div class="col s8 offset-s2 " id="img">
-                    <img class="circle responsive-img center-align" src="../img/gohan.jpeg" id="photo" />
+                <!-- <div class="col s8 offset-s2 " id="img"> -->
+                <!-- <img class="circle responsive-img center-align" src="../img/gohan.jpeg" id="photo" /> -->
+
+                <div class="col s12 m6 totalcard">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="../img/gohan.jpeg">
+                        </div>
+                        <div class="card-content">
+                            <div class="row">
+                                <span class="card-title black-text center-align ">Unseen Spell</span>
+                            </div>
+                            <div class="row">
+                                <div class="col s4 testeclass center-align">
+                                    <a class="btn-floating waves-effect waves-light red">
+                                        <i class="material-icons">add</i>
+                                    </a>
+                                </div>
+                                <div class="col s4 offset-s4 testeclass center-align">
+                                    <a class="btn-floating waves-effect waves-light red">
+                                        <i class="material-icons">gamepad</i>
+                                    </a>
+                                </div>
+                            </div>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut
+                                ex iaculis,
+                                cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc
+                                imperdiet sed nisl
+                                nec commodo. Integer eu erat quam. Pellentesque mattis lectus vitae turpis varius
+                                facilisis. Sed ut
+                                faucibus erat. Etiam et nisl et odio facilisis tristique quis quis dolor. Aenean
+                                venenatis, ipsum at
+                                viverra venenatis, justo ex cursus magna, et suscipit nunc nisi at mi. Phasellus dictum
+                                lectus nec
+                                augue commodo, ac pellentesque ligula tristique. Suspendisse non vulputate magna. Proin
+                                ac sem
+                                rutrum, congue felis non, faucibus purus. Donec in mattis erat, in sodales.</p>
+                            <!-- <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut
+                                ex iaculis,
+                                cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc
+                                imperdiet sed nisl
+                                nec commodo. Integer eu erat quam. Pellentesque mattis lectus vitae turpis varius
+                                facilisis. Sed ut
+                                faucibus erat. Etiam et nisl et odio facilisis tristique quis quis dolor.</p> -->
+                        </div>
+                    </div>
                 </div>
 
-                <div class="col s10 offset-s1 center-align" id="icons">
-                    <div class="col s6 btn-act">
-                            <i class="medium material-icons ">clear</i>
+                <!-- </div> -->
+                <!-- <div class="col s10 offset-s1 center-align" id="icons">
+                    <div class="col s5 btn-act waves-effect waves-red center" id="aux">
+                        <a class="btn-floating btn-large waves-effect  red">
+                            <i class="medium material-icons">clear</i>
+                        </a>
                     </div>
-                    <div class="col s6 btn-act">                        
-                            <i class="medium material-icons ">gamepad</i>
-                    </div>
-                </div>
-                <div class="col s10 offset-s1 center-align" id="details">
+                    <div class="col s5 offset-s2 btn-act waves-effect waves-light center">                        
+                        <a class="btn-floating btn-large waves-effect green">
+                            <i class="medium material-icons">gamepad</i>
+                        </a>
+                        </div>
+                </div> -->
+                <!-- <div class="col s10 offset-s1 center-align" id="details">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut ex iaculis,
                     cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc imperdiet sed nisl
                     nec commodo. Integer eu erat quam. Pellentesque mattis lectus vitae turpis varius facilisis. Sed ut
@@ -56,7 +90,7 @@
                     viverra venenatis, justo ex cursus magna, et suscipit nunc nisi at mi. Phasellus dictum lectus nec
                     augue commodo, ac pellentesque ligula tristique. Suspendisse non vulputate magna. Proin ac sem
                     rutrum, congue felis non, faucibus purus. Donec in mattis erat, in sodales.
-                </div>
+                </div> -->
                 <!-- <div class="col s10 offset-s1 center-align" id="details">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut ex iaculis,
                     cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc imperdiet sed nisl
