--- a/www/html/finder.html
+++ b/www/html/finder.html
@@ -20,12 +20,12 @@
 <body>
     <div class="content">
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <!-- <div class="col s8 offset-s2 " id="img"> -->
                 <!-- <img class="circle responsive-img center-align" src="../img/gohan.jpeg" id="photo" /> -->
 
-                <div class="col s12 m6 totalcard">
-                    <div class="card">
+                <div class="col s12 totalcard">
+                    <div class="card cardsize ">
                         <div class="card-image">
                             <img src="../img/gohan.jpeg">
                         </div>
@@ -36,16 +36,17 @@
                             <div class="row">
                                 <div class="col s4 testeclass center-align">
                                     <a class="btn-floating waves-effect waves-light red">
-                                        <i class="material-icons">add</i>
+                                        <i class="material-icons">clear</i>
                                     </a>
                                 </div>
                                 <div class="col s4 offset-s4 testeclass center-align">
-                                    <a class="btn-floating waves-effect waves-light red">
+                                    <a class="btn-floating waves-effect waves-light green   ">
                                         <i class="material-icons">gamepad</i>
                                     </a>
                                 </div>
                             </div>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut
+                            <!-- <p>oi</p> -->
+                            <p id="desc">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor nisi, efficitur ut
                                 ex iaculis,
                                 cursus pellentesque ex. Curabitur pharetra facilisis velit vitae interdum. Nunc
                                 imperdiet sed nisl
