--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,8 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -21,44 +22,62 @@
         <!-- <br>
         <br> -->
         <center>
-            <img src="img/logo_oleiro.png">
-            <!-- </center> -->
 
+
+            <img src="img/logo-branco.png">
 
             <div class="row">
-                <form class="col s12 centered" id="login_form" action="#">
-                    <div class="email" style="color: red; font-weight: 900"></div>
-                    <div class="row">
-                        <div class="input-field col s12 ">
-                            <div class="input-field col s12 ">
-                                <center>E-mail</center>
-                                <input name="email" type="email" value="spellzito@oleirosoftware.com.br">
-                                <!-- <label for="email" class="active black-text">Email</label> -->
+                <div class="col s12">
+                    <div class="card indigo lighten-5" >
+                        <div class="card-content black-text" id="formcard">
+                            <!-- <span class="card-title">
+                                Card Title
+                            </span> -->
+                            <div class="row">
+                                <form class="col s12 centered black-text" id="login_form" action="#">
+                                    <div class="email" style="color: red; font-weight: 900"></div>
+                                    <div class="row">
+                                        <div class="input-field col s12 ">
+                                            <div class="input-field col s12 ">
+                                                <center>E-mail</center>
+                                                <input name="email" type="email"
+                                                    value="spellzito@oleirosoftware.com.br">
+                                                <!-- <label for="email" class="active black-text">Email</label> -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="passwd" style="color: red; font-weight: 900"></div>
+                                    <div class="row">
+                                        <div class="input-field col s12 ">
+                                            <center>Senha</center>
+                                            <input name="passwd" type="password" id="passwd_field" value="1aA9!ss">
+                                            <!-- <input name="passwd" type="password" id="passwd_field"> -->
+                                            <!-- <label for="password" class="active black-text ">Password</label> -->
+                                        </div>
+
+                                    </div>
+                                    <!-- <a href="#" class="waves-effect waves-light btn">Button</a> -->
+                                    <button class="btn waves-effect waves-light btn-blue black-text"
+                                        style="background:whitesmoke" type="submit" name="action">Enviar</button>
+                                </form>
+                                <br>
+                                <br>
+                                <br> Não tem uma conta?
+                                <br> Registre-se
+                                <a href="html/register.html" style="color: black">
+                                    <u>Aqui</u>
+                                </a>
+
                             </div>
                         </div>
+                        <!-- <div class="card-action">
+                          <a href="#">This is a link</a>
+                          <a href="#">This is a link</a>
+                        </div> -->
                     </div>
-                    <div class="passwd" style="color: red; font-weight: 900"></div>
-                    <div class="row">
-                        <div class="input-field col s12 ">
-                            <center>Senha</center>
-                            <input name="passwd" type="password" id="passwd_field" value="1aA9!ss">
-                            <!-- <input name="passwd" type="password" id="passwd_field"> -->
-                            <!-- <label for="password" class="active black-text ">Password</label> -->
-                        </div>
-
-                    </div>
-                    <!-- <a href="#" class="waves-effect waves-light btn">Button</a> -->
-                    <button class="btn waves-effect waves-light btn-blue black-text" style="background:whitesmoke" type="submit" name="action">Enviar</button>
-                </form>
-
+                </div>
             </div>
-            <br>
-            <br>
-            <br> Não tem uma conta?
-            <br> Registre-se
-            <a href="html/register.html" style="color: black">
-                <u>Aqui</u>
-            </a>
+
         </center>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
