--- a/www/index.html
+++ b/www/index.html
@@ -27,9 +27,9 @@
             <img src="img/logo-branco.png">
 
             <div class="row">
-                <div class="col s12">
-                    <div class="card indigo lighten-5" >
-                        <div class="card-content black-text" id="formcard">
+                <div class="col s12 m10 offset-m1">
+                    <div class="card indigo lighten-5" id="card">
+                        <div class="card-content black-text">
                             <!-- <span class="card-title">
                                 Card Title
                             </span> -->
@@ -40,8 +40,7 @@
                                         <div class="input-field col s12 ">
                                             <div class="input-field col s12 ">
                                                 <center>E-mail</center>
-                                                <input name="email" type="email"
-                                                    value="spellzito@oleirosoftware.com.br">
+                                                <input name="email" type="email" class="center-align" value="spellzito@oleirosoftware.com.br">
                                                 <!-- <label for="email" class="active black-text">Email</label> -->
                                             </div>
                                         </div>
@@ -50,23 +49,24 @@
                                     <div class="row">
                                         <div class="input-field col s12 ">
                                             <center>Senha</center>
-                                            <input name="passwd" type="password" id="passwd_field" value="1aA9!ss">
+                                            <input name="passwd" type="password" class="center-align" id="passwd_field" value="1aA9!ss">
                                             <!-- <input name="passwd" type="password" id="passwd_field"> -->
                                             <!-- <label for="password" class="active black-text ">Password</label> -->
                                         </div>
 
                                     </div>
                                     <!-- <a href="#" class="waves-effect waves-light btn">Button</a> -->
-                                    <button class="btn waves-effect waves-light btn-blue black-text"
-                                        style="background:whitesmoke" type="submit" name="action">Enviar</button>
+                                    <button class="btn btn-blue btn-bg" type="submit" name="action">Enviar</button>
                                 </form>
                                 <br>
                                 <br>
-                                <br> Não tem uma conta?
-                                <br> Registre-se
-                                <a href="html/register.html" style="color: black">
-                                    <u>Aqui</u>
-                                </a>
+                                <div class="col s10 offset-s1" id="registerdiv">
+                                    <br> Não tem uma conta?
+                                    <br> Registre-se
+                                    <a href="html/register.html" style="color: black">
+                                        <u>Aqui</u>
+                                    </a>
+                                </div>
 
                             </div>
                         </div>
