--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -40,7 +40,7 @@
                                             <ul id='dropdown1' class='dropdown-content'>
                                                 <!-- <li><a href="#" class="light-blue-text" id="profile_button">Perfil</a></li> -->
                                                 <!-- <li><a href="#!" class="light-blue-text" id="passwd_button">Alterar Senha</a></li> -->
-                                                <li><a href="home.html" class="menuop" id="profile_button">Perfil</a>
+                                                <li><a href="home.html" class="menuop" id="profile_button">Home</a>
                                                 </li>
                                                 <li><a href="change_passwd.html" class=" menuop"
                                                         id="passwd_button">Alterar
